@@ -18,7 +18,7 @@ public class SupplierController
 	public Map<String, Object> getAllCustomers()
 	{
 		Map<String, Object> result = new HashMap<>();
-		result.put("fields", List.of("Code", "Creation Date", "Name", "Address", "City", "Country"));
+		result.put("fields", Arrays.asList("Code", "Creation Date", "Name", "Address", "City", "Country"));
 		List<Supplier> suppliers = (List<Supplier>) supplierRepository.findAll();
 		List<Map<String, String>> values = new ArrayList<>();
 		for (Supplier supplier : suppliers)
